--- a/s/st/stu/studentsreview.com.html
+++ b/s/st/stu/studentsreview.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the studentsreview.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216161039id_/http%3A//www.studentsreview.com/ppolicy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the studentsreview.com privacy policy that was archived on 2009-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090610002224id_/http%3A//www.studentsreview.com/ppolicy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="STYLESHEET" type="text/css" href="http://static.studentsreview.com/sr.css">
 <link rel="icon" type="image/png" href="http://static.studentsreview.com/images/facebook_logo.png">
-<title>College Reviews: StudentsReview : Over 71400  College Reviews!  (3,359 schools reviewed)</title>
+<title>College Reviews: StudentsReview : Over 78100  College Reviews!  (3,359 schools reviewed)</title>
 <script type="text/javascript" language="JavaScript" src="http://static.studentsreview.com/test2/sr.js"></script>
 <style>div.blank { background-image:url('/1ptrans.gif');</style>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -113,7 +113,7 @@ http://www2.studentsreview.com/menus/dmb_m.gif
 <tr>
 <td colspan="3" bgcolor="#FFFFFF">
 
-<a href="http://www.studentsreview.com"><font size="4" color="#880000"><b>StudentsReview</b></font></a><font size="4" color="#880000"> :: <font size="4"><b>Over 71400
+<a href="http://www.studentsreview.com"><font size="4" color="#880000"><b>StudentsReview</b></font></a><font size="4" color="#880000"> :: <font size="4"><b>Over 78100
  College Reviews!  (3,359 schools reviewed)</b></font></font>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#CC0000"><b>Students Know Best.  <b></b></b></font><b><b>
 
@@ -191,7 +191,8 @@ http://www2.studentsreview.com/menus/dmb_m.gif
 <td colspan="3" bgcolor="#FFFFFF"><!-- <img src='/1ptrans.gif' height='16' width='1'> -->
 <table border="0" cellpadding="1" cellspacing="0" width="100%"><tbody><tr><td valign="bottom">
 
-<div align="left"><font color="#B70000"> [<a href="http://www.studentsreview.com" class="menu" target="_top"><font color="#880000"><img src="/1ptrans.gif" width="2" border="0">Home<img src="/1ptrans.gif" width="2" border="0"></font></a>]<img src="/1ptrans.gif" width="2" border="0">[<a href="http://www.studentsreview.com/faq.shtml" class="menu" target="_top"><font color="#880000"><img src="/1ptrans.gif" width="2" border="0">Faq<img src="/1ptrans.gif" width="2" border="0"></font></a>]<img src="/1ptrans.gif" width="2" border="0">[<a href="http://www2.studentsreview.com/members/" class="menu" target="_top"><font color="#880000"><img src="/1ptrans.gif" width="2" border="0">Members<img src="/1ptrans.gif" width="2" border="0"></font></a>]</font></div><font color="#B70000">
+<div align="left"><font color="#B70000"> [<a href="http://www.studentsreview.com" class="menu" target="_top"><font color="#880000"><img src="/1ptrans.gif" width="2" border="0">Home<img src="/1ptrans.gif" width="2" border="0"></font></a>]<img src="/1ptrans.gif" width="2" border="0">[<a href="http://www.studentsreview.com/faq.shtml" class="menu" target="_top"><font color="#880000"><img src="/1ptrans.gif" width="2" border="0">Faq<img src="/1ptrans.gif" width="2" border="0"></font></a>]<img src="/1ptrans.gif" width="2" border="0">[<a href="http://www2.studentsreview.com/members/" class="menu" target="_top"><font color="#880000"><img src="/1ptrans.gif" width="2" border="0">Members<img src="/1ptrans.gif" width="2" border="0"></font></a>]<img src="/1ptrans.gif" width="2" border="0">[<a href="http://blogs.studentsreview.com/studentsreview/" class="menu" target="_top"><font color="#880000"><img src="/1ptrans.gif" width="2" border="0">Blog<img src="/1ptrans.gif" width="2" border="0"></font></a>]
+</font></div><font color="#B70000">
 
 </font></td>
 <td width="400">
@@ -935,8 +936,8 @@ div.rounded { padding: 5px; }
 </style>
 <div class="rounded" style="background-color: #ffffff">
 <div align="right">
-<div style="padding:0px; margins:0px;"><table border="0" padding="0" cellspacing="0"><tbody><tr><td><font size="1"><a href="http://del.icio.us/post?url=://www.studentsreview.com/ppolicy.shtml&amp;title=Over 71400&#10; College Reviews!  (3,359 schools reviewed)" onmouseover="overlib('Bookmark with Del.icio.us!')" onmouseout="nd()"><img src="http://static.studentsreview.com/images/delicious.gif" border="0" width="18" height="18"></a> <a href="javascript:void(0)" onclick="window.open('http://www.facebook.com/sharer.php?u='+encodeURIComponent(document.location.href)+'&amp;t='+encodeURIComponent(document.title),'sharer','toolbar=0,status=0,width=626,height=436')"><img src="http://static.studentsreview.com/images/facebook.gif" border="0" width="16" height="16"></a><a href="http://digg.com/submit?phase=2&amp;url=://www.studentsreview.com/ppolicy.shtml" onmouseover="overlib('Submit to Digg!')" onmouseout="nd()"><img src="http://static.studentsreview.com/images/digg.gif" border="0" width="16" height="14"></a> <a href="http://technorati.com/cosmos/search.html?url=://www.studentsreview.com/ppolicy.shtml" onmouseover="overlib('Submit to Technorati!')" onmouseout="nd()"><img src="http://static.studentsreview.com/images/technorati.gif" border="0" width="14" height="17"></a> <a href="http://blinklist.com/index.php?Action=Blink/addblink.php&amp;url=://www.studentsreview.com/ppolicy.shtml&amp;Title=Over 71400&#10; College Reviews!  (3,359 schools reviewed)" onmouseover="overlib('Bookmark with Blinklist!')" onmouseout="nd()"><img src="http://static.studentsreview.com/images/blinklist.gif" border="0" width="18" height="18"></a> <a href="http://furl.net/storeIt.jsp?t=Over 71400&#10; College Reviews!  (3,359 schools reviewed)&amp;u://www.studentsreview.com/ppolicy.shtml" onmouseover="overlib('Store article with Furl!')" onmouseout="nd()"><img src="http://static.studentsreview.com/images/furl.gif" border="0" width="16" height="17"></a> </font></td><td><div style="position: relative; width: 50px; " onmouseover="getobj('linkme').style.visibility = 'visible';" onmouseout="getobj('linkme').style.visibility = 'hidden';"><a href="" onmouseover="overlib('Link to this page from your webpage or MySpace account!')" onmouseout="nd()"><font size="1">Link me!</font></a><div class="rounded" id="linkme" style="z-index: 5; position: absolute; visibility: hidden; text-align: left; background-color: #d0ffd0; width: 500px; padding:5px"><font color="green">Link to page from your webpage or MySpace account:<br>Just copy and paste!<pre><font size="1">&lt;a href='://www.studentsreview.com/ppolicy.shtml'&gt;
-Over 71400
+<div style="padding:0px; margins:0px;"><table border="0" padding="0" cellspacing="0"><tbody><tr><td><font size="1"><a href="http://del.icio.us/post?url=://www.studentsreview.com/ppolicy.shtml&amp;title=Over 78100&#10; College Reviews!  (3,359 schools reviewed)" onmouseover="overlib('Bookmark with Del.icio.us!')" onmouseout="nd()"><img src="http://static.studentsreview.com/images/delicious.gif" border="0" width="18" height="18"></a> <a href="javascript:void(0)" onclick="window.open('http://www.facebook.com/sharer.php?u='+encodeURIComponent(document.location.href)+'&amp;t='+encodeURIComponent(document.title),'sharer','toolbar=0,status=0,width=626,height=436')"><img src="http://static.studentsreview.com/images/facebook.gif" border="0" width="16" height="16"></a><a href="http://digg.com/submit?phase=2&amp;url=://www.studentsreview.com/ppolicy.shtml" onmouseover="overlib('Submit to Digg!')" onmouseout="nd()"><img src="http://static.studentsreview.com/images/digg.gif" border="0" width="16" height="14"></a> <a href="http://technorati.com/cosmos/search.html?url=://www.studentsreview.com/ppolicy.shtml" onmouseover="overlib('Submit to Technorati!')" onmouseout="nd()"><img src="http://static.studentsreview.com/images/technorati.gif" border="0" width="14" height="17"></a> <a href="http://blinklist.com/index.php?Action=Blink/addblink.php&amp;url=://www.studentsreview.com/ppolicy.shtml&amp;Title=Over 78100&#10; College Reviews!  (3,359 schools reviewed)" onmouseover="overlib('Bookmark with Blinklist!')" onmouseout="nd()"><img src="http://static.studentsreview.com/images/blinklist.gif" border="0" width="18" height="18"></a> <a href="http://furl.net/storeIt.jsp?t=Over 78100&#10; College Reviews!  (3,359 schools reviewed)&amp;u://www.studentsreview.com/ppolicy.shtml" onmouseover="overlib('Store article with Furl!')" onmouseout="nd()"><img src="http://static.studentsreview.com/images/furl.gif" border="0" width="16" height="17"></a> </font></td><td><div style="position: relative; width: 50px; " onmouseover="getobj('linkme').style.visibility = 'visible';" onmouseout="getobj('linkme').style.visibility = 'hidden';"><a href="" onmouseover="overlib('Link to this page from your webpage or MySpace account!')" onmouseout="nd()"><font size="1">Link me!</font></a><div class="rounded" id="linkme" style="z-index: 5; position: absolute; visibility: hidden; text-align: left; background-color: #d0ffd0; width: 500px; padding:5px"><font color="green">Link to page from your webpage or MySpace account:<br>Just copy and paste!<pre><font size="1">&lt;a href='://www.studentsreview.com/ppolicy.shtml'&gt;
+Over 78100
  College Reviews!  (3,359 schools reviewed)
 &lt;/a&gt;</font></pre></font></div></div></td><td><a href="javascript:void(0);" onmouseover="overlib(overlib_forward_page(),STICKY, CLOSECLICK, RIGHT, OFFSETX, 0, OFFSETY, 0, CAPTION,'Forward This Page to friend!',BGCOLOR,'#FFCD72', FGCOLOR,'#FFFFF4', CAPCOLOR,'#FF7C00');"><font color="orange" size="1">Forward me!</font></a></td></tr></tbody></table></div></div>
 
@@ -1039,7 +1040,8 @@ until we add our premium content in, with higher $ power, put ads closer to cont
 <td valign="top">
 <center>
 
-<a href="https://www2.xlibris.com/bookstore/bookdisplay.asp?bookid=40146">
+<a href="http://search.barnesandnoble.com/A-Doctors-Guide-to-Pregnancy/Dr-Rachel-Donaldson/e/9781436308717/?itm=3">
+<!--https://www2.xlibris.com/bookstore/bookdisplay.asp?bookid=40146'>-->
 <img src="/images/40146-DONA-thumbnail.gif">
 </a>
 
@@ -1125,8 +1127,8 @@ Write an Article!</b></a>
 
 &nbsp;</p><p>
 </p><div style="position: absolute;width: 300px; height:250px; padding:0px; margins: 0px;">
-<iframe src="/adcodes/box_omega.php3" name="iscroll1" width="300" height="250" marginwidth="0" marginheight="0" frameborder="0" scrolling="no">
-<ILAYER name="nscroll1" id="nscroll1" SRC="/adcodes/box_omega.php3" width=300 height=250 marginwidth="0"  
+<iframe src="http://www.studentsreview.com/adcodes/box_omega.php3" name="iscroll1" width="300" height="250" marginwidth="0" marginheight="0" frameborder="0" scrolling="no">
+<ILAYER name="nscroll1" id="nscroll1" SRC="http://www.studentsreview.com/adcodes/box_omega.php3" width=300 height=250 marginwidth="0"  
 marginheight="0" frameborder="0" scrolling="no">
 </ILAYER></iframe>
 </div>
@@ -1142,8 +1144,8 @@ marginheight="0" frameborder="0" scrolling="no">
 <td valign="top" width="120">
 
 <div style="padding:0px;margins:0px;width:160px;height:600px;">
-<iframe src="/adcodes/sky_omega.php3" name="iscroll1" width="160" height="600" marginwidth="0" marginheight="0" frameborder="0" scrolling="no">
-<ILAYER name="nscroll1" id="nscroll1" SRC="/adcodes/sky_omega.php3" width=160 height=600 marginwidth="0"
+<iframe src="http://www.studentsreview.com/adcodes/sky_omega.php3" name="iscroll1" width="160" height="600" marginwidth="0" marginheight="0" frameborder="0" scrolling="no">
+<ILAYER name="nscroll1" id="nscroll1" SRC="http://www.studentsreview.com/adcodes/sky_omega.php3" width=160 height=600 marginwidth="0"
 marginheight="0" frameborder="0" scrolling="no">
 </ILAYER></iframe>
 </div>
@@ -1232,7 +1234,7 @@ marginheight="0" frameborder="0" scrolling="no">
                         <center>
                         <hr width="500">
                         <font face="Arial,sans-serif" size="1">Copyright
-© 2000-2008. Students Review, Inc. All Rights Reserved.</font>
+© 2000-2009. Students Review, Inc. All Rights Reserved.</font>
                         </center>
 &nbsp;</font>
 </center></td></tr>
@@ -1305,7 +1307,7 @@ College reviews and University reviews and ratings by students and for students<
 
 
 <!-- <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script> -->
-<img src="http://www19.socialmedia.com/facebook/tracker.php" width="1" height="1" border="0">
+<!-- <img src="http://www19.socialmedia.com/facebook/tracker.php" width="1" height="1" border="0"/>-->
 <script language="JavaScript" type="text/javascript">
 var rimPath=null;var rjsPath=null;var rPath2Root=null;function InitRelCode(){var iImg;var jImg;var tObj;if(!document.layers){iImg=document.images['DMBImgFiles'];jImg=document.images['DMBJSCode'];tObj=jImg;}else{tObj=document.layers['DMBRI'];if(tObj){iImg=tObj.document.images['DMBImgFiles'];jImg=tObj.document.images['DMBJSCode'];}}if(!tObj){window.setTimeout("InitRelCode()",700);return false;}rimPath=_gp(iImg.src);rjsPath=_gp(jImg.src);rPath2Root=rjsPath+"../";return true;}function _purl(u){return xrep(xrep(u,"%%REP%%",rPath2Root),"\\","/");}function _fip(img){if(img.src.indexOf("%%REL%%")!=-1) img.src=rimPath+img.src.split("%%REL%%")[1];return img.src;}function _gp(p){return p.substr(0,p.lastIndexOf("/")+1);}function xrep(s,f,n){if(s) s=s.split(f).join(n);return s;}InitRelCode();
 </script>
