--- a/g/gi/gif/gifanimations.com.html
+++ b/g/gi/gif/gifanimations.com.html
@@ -1,23 +1,27 @@
-<!--The following is the downloaded HTML source of the gifanimations.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217053211id_/http%3A//www.gifanimations.com/GA/animation/PrivacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gifanimations.com privacy policy that was archived on 2009-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090610024415id_/http%3A//www.gifanimations.com/GA/animation/PrivacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head>
 
 <title>Free Animated . We have many more animations of </title>
 <meta name="keywords" content=",,animations,animation,free gif animation,animated gif,clip art,clipart,graphic animation,image,gallery,collection,button,cartoon,flash,web design,art,icon ">
 <meta name="description" content="Animated . Collection of Free Animations of GIF Images for use in Web Design, Email and Cell Phone">
- <base href="http://www.gifanimations.com/GA/PrivacyPolicy.jsp">
+ <base href="http://gifanimations.com/GA/PrivacyPolicy.jsp">
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
- <link rel="stylesheet" href="/GA/BasicStyle.css" type="text/css">
+ <link rel="stylesheet" href="/basicstyle.css" type="text/css">
  <meta http-equiv="pics-label" content="(pics-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; comment &quot;ICRAonline EN v2.0&quot; l gen true for &quot;http://www.gifanimations.com&quot; r (nz 1 vz 1 lz 1 oz 1 cz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.gifanimations.com&quot; r (n 0 s 0 v 0 l 0))">
 
+			<style type="text/css">
+@import url(http://www.google.com/cse/api/branding.css);
+</style>
 </head>
 
 <body>
 
 <div style="background-color: #5081bb;">&nbsp;&nbsp;<img src="/GA/media/GifAnimations-Logo.png" height="29" width="237" border="0" alt="Free Animated GIF Images">
 
-<div align="center"><script type="text/javascript"> google_ad_client = "pub-9384367355851866"; google_ad_slot = "2058952623"; google_ad_width = 728; google_ad_height = 90; </script> <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"> </script></div>
+    
+<div align="center"><script type="text/javascript" language="JavaScript">  rnum=Math.round(Math.random() * 100000);  ts=String.fromCharCode(60);  if (window.self != window.top) {nf=''} else {nf='NF/'};  document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad10100a.cgi/v=2.3S/sz=468x60A|728x90A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>'); </script><script src="http://www.burstnet.com/cgi-bin/ads/ad10100a.cgi/v=2.3S/sz=468x60A|728x90A/28856/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad10100a-map.cgi/ns/v=2.3S/sz=468x60A|728x90A/" target="_top">  <img src="http://www.burstnet.com/cgi-bin/ads/ad10100a.cgi/ns/v=2.3S/sz=468x60A|728x90A/" border="0" alt="Click Here" /></a>  </noscript></div>
 
 <div style="background-color: #ffce5b;">
 <table border="0" cellpadding="0" cellspacing="0" bgcolor="#ffce5b">
@@ -32,13 +36,31 @@
 		<td nowrap="nowrap" class="TopDisplayMenu"><a href="/GA/animation/PrivacyPolicy">Privacy Policy</a></td>
 		<td class="TopDisplayMenu">&nbsp;&nbsp;|&nbsp;&nbsp;</td>
 		<td align="left" nowrap="nowrap" class="TopDisplayMenu"><a href="mailto:webmaster@gifanimations.com?subject=Ref: Web Site Contact">Contact
-		Us</a></td>
-		<td class="TopDisplayMenu">&nbsp;&nbsp;|&nbsp;&nbsp;</td>
-		<td align="left" nowrap="nowrap" class="TopDisplayMenu">Search on
-		<span style="color: red;">professional<span style="font-weight: bold;">animations</span></span>&nbsp;&nbsp;
-		<form class="TopDisplayMenu" id="ThumbNailPageForm" method="get" action="/animation/ImageSearch" style="display: inline;"><input type="text" name="searchTags" value="" style="display: inline;">&nbsp;&nbsp;&nbsp;&nbsp;
-		<input name="Submit" type="image" src="/images/pa_btn_go.gif" align="middle" width="22" height="23" hspace="0" vspace="0" border="0"></form>
-		</td>
+		Us</a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+		
+
+<td nowrap="nowrap">
+<span class="cse-branding-right">
+
+    <form style="display: inline;" action="./GoogleSearchResults.jsp" id="cse-search-box">
+      <span>
+        <input type="hidden" name="cx" value="partner-pub-9384367355851866:58tzzbrqr72">
+        <input type="hidden" name="cof" value="FORID:10">
+        <input type="hidden" name="ie" value="ISO-8859-1">
+        <input type="text" name="q" size="31">
+        <input type="submit" name="sa" value="Search">
+      </span>
+    </form>
+
+    <img src="http://www.google.com/images/poweredby_transparent/poweredby_FFFFFF.gif" alt="Google">
+  <span class="cse-branding-text">
+    Custom Search
+  </span>
+
+</span>
+
+</td>
+
 	</tr>
 </tbody></table>
 </div>
@@ -145,13 +167,20 @@
 		Help documentation for more information. <br>
 		<br>
 		<strong>GIFAnimations</strong> works with a third party that serves
-		ads to this site. To find out more about how they (BURST Media) manage
-		the privacy of information in conjunction with serving ads on this
-		site, click <a href="http://www.burstmedia.com">here</a>.</div>
+		ads to this site.</div>
+		    <div align="center" style="font-size:9pt;"><br><br><br>advertisement<br><script type="text/javascript" language="JavaScript">  rnum=Math.round(Math.random() * 100000);  ts=String.fromCharCode(60);  if (window.self != window.top) {nf=''} else {nf='NF/'};  document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad10100a.cgi/v=2.3S/sz=300x250A/NZ/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>'); </script><script src="http://www.burstnet.com/cgi-bin/ads/ad10100a.cgi/v=2.3S/sz=300x250A/NZ/73423/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad10100a-map.cgi/ns/v=2.3S/sz=300x250A/" target="_top">  <img src="http://www.burstnet.com/cgi-bin/ads/ad10100a.cgi/ns/v=2.3S/sz=300x250A/" border="0" alt="Click Here" /></a>  </noscript></div>
 		</td>
 	</tr>
 </tbody></table>
-
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3725036-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
 
 
 </body></html>
