--- a/l/la/lap/laptopmag.com.html
+++ b/l/la/lap/laptopmag.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the laptopmag.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217072137id_/http%3A//www.bedfordcommunications.com/Privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the laptopmag.com privacy policy that was archived on 2009-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090610025845id_/http%3A//www.bedfordcommunications.com/Privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Bedford Communications, Inc. - Privacy Policy</title>
@@ -50,6 +50,16 @@ src="http://laptopbedfordcom.122.2O7.net/b/ss/laptopbedfordcom/1/H.2--NS/0"
 height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
 <!-- End SiteCatalyst code version: H.2. -->
 <div id="Layer1" style="position:absolute; left:560px; top:50px; width:177px; height:25px; z-index:1"><img src="/images/header_privacy.gif" border="0" alt="Privacy Policy"></div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-7027025-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr valign="top"> 
 		<td background="/images/header_bg.gif" height="76" width="654"><a href="/"><img src="/images/top_header.gif" width="648" height="76" border="0" alt="Bedford Communications, Inc."></a></td>
