--- a/e/ed/eda/edarticle.com.html
+++ b/e/ed/eda/edarticle.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the edarticle.com privacy policy that was archived on 2008-09-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080914174932id_/http%3A//www.edarticle.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the edarticle.com privacy policy that was archived on 2009-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090611050818id_/http%3A//www.edarticle.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -21,8 +21,12 @@
   <div id="content-pri">  
      <!-- page -->
 <h1>Privacy Policy</h1>
-<p>EdArticles.Com publishes information that you provide with your article including your name and any information you provide "About the Author." Other information is used only for the purposes of EdArticle.Com. We live by the Golden Rule when making decisions regarding user information. If you have any doubts about whether you want your information available on the Internet, simply do not submit an article.</p>
-<p>Third parties may be placing and reading cookies on your browser, or using web beacons to collect information, in the course of ads being served on this website.</p>
+<div id="content">
+<p align="center">Third parties may be placing and reading cookies on your browser, or using web beacons to collect information, in the course of ads being served on this website.</p>
+<p align="center">We use third-party advertising companies to serve ads when you visit our website. These companies may use information (not including your name, address, email address, or telephone number) about your visits to this and other websites in order to provide advertisements about goods and services of interest to you. If you would like more information about this practice and to know your choices about not having this information used by these companies, <a target="_blank" href="http://www.networkadvertising.org/managing/">click here</a>.</p>
+<p align="center">* Google, as a third party vendor, uses cookies to serve ads on your site. * Google's use of the DART cookie enables it to serve ads to your users based on their visit to your sites and other sites on the Internet. * Users may opt out of the use of the DART cookie by visiting the <a target="_blank" href="http://www.google.com/privacy_ads.html">Google ad and content network privacy policy</a>.</p>
+<p align="center">Third parties may be placing and reading cookies on your browser, or using web beacons to collect information, in the course of ads being served on this website.</p>
+</div>
 <!-- /page -->
 
     <br><br><br>
@@ -72,7 +76,7 @@
 
 <!-- google_ad_section_end -->
    <br>
-   8 users online.<br><br>
+   13 users online.<br><br>
   </div>
  </div><br><br><br><br><br>
  <div id="css-foot">
@@ -93,4 +97,5 @@ urchinTracker();
 <!-- /footer -->
 
 
-<u style="display:none"><a href="http://edarticle.com/skins/default/images/sonmom_4DS0736.html"></a> <a href="http://edarticle.com/skins/default/images/sonmom_4DS0737.html"></a> <a href="http://edarticle.com/skins/default/images/sonmom_4DS0738.html"></a> <a href="http://edarticle.com/skins/default/images/sonmom_4DS0739.html"></a> <a href="http://edarticle.com/skins/default/images/sonmom_4DS0740.html"></a></u></body></html>
+<a href="http://www.yarisma.biz/yarisma/"><span style="color: #ffffff;">yarisma</span></a>
+<a href="http://www.zomoyun.com/oyun.html"><span style="color: #ffffff;">oyun</span></a></body></html>
